# ray

./: .gitignore  BUILD.bazel  WORKSPACE  wasm_test.ipynb
bazel/: BUILD.wasmtime_c_api  BUILD.wavm  ray_deps_setup.bzl
ci/docker/: build.Dockerfile
doc/source/ray-contribute/: development.rst
docker/wasm/: Dockerfile  README.md
python/: build-wheel-macos.sh  build-wheel-manylinux2014.sh  build-wheel-windows.sh  requirements.txt  setup.py
python/ray/: __init__.py  _raylet.pyx  node.py  ray_constants.py  remote_function.py
python/ray/_private/: function_manager.py  gcs_utils.py  node.py  parameter.py  ray_constants.py  ray_option_utils.py  serialization.py  services.py  signature.py  utils.py  worker.py
python/ray/_private/runtime_env/: context.py
python/ray/_private/workers/: default_worker.py
python/ray/autoscaler/_private/: cluster_dump.py  constants.py  monitor.py
python/ray/includes/: common.pxd  function_descriptor.pxd  function_descriptor.pxi
python/ray/scripts/: gcs_server_wrapper.py  scripts.py
python/ray/tests/: test_basic_4.py
python/ray/util/: __init__.py
src/ray/capi/: core_worker.cc
src/ray/common/: function_descriptor.cc  function_descriptor.h  ray_config_def.h
src/ray/core_worker/: common.cc  common.h
src/ray/gcs/gcs_server/: gcs_actor_manager.h  gcs_server.cc  gcs_server.h  gcs_server_main.cc
src/ray/gcs/gcs_server/test/: gcs_server_rpc_test.cc
src/ray/protobuf/: BUILD  common.proto
src/ray/raylet/: main.cc  worker_pool.cc
wasm/: BUILD.bazel  Cargo.toml
wasm/example/: BUILD.bazel  build.sh
wasm/example/base/: base.c
wasm/example/mem-pointer/: pointer.c
wasm/example/simple/: build.sh  simple.c  war.h
wasm/example/wasm-test/: build.sh  test.c  test.objdump  test.wasm  test.wat
wasm/include/: war.h
wasm/include/engine/: utils.h  wasm_engine.h  wasmtime.hh
wasm/include/ray/: api.h
wasm/include/ray/api/: arguments.h  ray_runtime.h  task_caller.h  xlang_function.h
wasm/src/cmd/: faas_worker.rs  raywa.cc  raywa.rs  warrior.rs  wasm_worker.rs
wasm/src/config/: mod.rs
wasm/src/engine/: mod.rs  wasm_engine.cc
wasm/src/engine/wasmedge_engine/: data.rs  mod.rs
wasm/src/engine/wasmtime_engine/: context.rs  data.rs  mod.rs
wasm/src/engine/wavm_engine/: api.rs  mod.rs
wasm/src/ray/runtime/: abstract_ray_runtime.cc  abstract_ray_runtime.h  local_mode_ray_runtime.cc  native_ray_runtime.cc
wasm/src/ray/runtime/task/: local_mode_task_submitter.cc  native_task_submitter.cc  task_executor.cc
wasm/src/ray/util/: function_helper.cc  function_helper.h  process_helper.cc
wasm/src/runtime/: helper.rs  id.rs  runtime.rs  task_executor.rs  task_submitter.rs
wasm/src/runtime/core/: core_worker.rs
wasm/src/runtime/hostcalls/: ray.rs
wasm/src/util/: mod.rs
